# AgenticAudit

./: .gitignore  INTEGRATION.md  README.md  SETUP.md  example_doc.txt  main.py  pyproject.toml  requirements.txt  vector_database.py
Backend/: .env.example  README.md  __init__.py  config.py  main.py  models.py  requirements.txt
Backend/tests/: test_endpoints.py
app/: agent.py  api.py  loaders.py
connectors/: brightdata_connector.py  deepseek_connector.py  vector_connector.py
files/: 00_README_and_test_scenarios.md  01_vendor_code_of_conduct.md  02_information_security_policy.md  03_travel_and_expense_policy.md  04_procurement_policy.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AlertCard.tsx  ComplianceDashboard.tsx  DocTypeSelect.tsx  DocumentRow.tsx  Dropzone.tsx  IntakeView.tsx  SubmittedView.tsx
frontend/src/lib/: alerts.ts  intake.ts
